syntax = "proto3";

package lms;

service LMS {
    rpc RegisterStudent(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Post(PostRequest) returns (PostResponse);
    rpc Logout(LogoutRequest) returns (LogoutResponse);
}

// Register a student
message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool status = 1;
    string message = 2;
}

// Login to the system
message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool status = 1;
    string token = 2;
    string message = 3;
}

// General request for fetching data (e.g., assignments, submissions, grades)
message GetRequest {
    string type = 1;           // e.g., view_assignments, view_submissions, view_grades
    string optional_data = 2;  // Used for additional information (e.g., assignment ID)
    string token = 3;          // Authentication token for the user
}

message GetResponse {
    bool status = 1;
    repeated string pending_assignments = 2;
    repeated string submitted_assignments = 3;
    string message = 4;
    string data = 5;  // Ensure the "data" field is defined correctly.
}

// General request for submitting data (e.g., adding assignments, submissions, grading)
message PostRequest {
    string type = 1;           // e.g., add_assignment, submit_assignment, grade
    string data = 2;           // The actual data being sent
    string token = 3;          // Authentication token for the user
}

message PostResponse {
    bool status = 1;
}

// Logout request
message LogoutRequest {
    string token = 1;
}

message LogoutResponse {
    bool status = 1;
}
